Install eslint code style

--- a/package.json
+++ b/package.json
@@ -6,23 +6,36 @@
   "author": "Cristian Moreno <khriztianmoreno@gmail.com> (http://khriztianmoreno.dev/)",
   "main": "index.js",
   "dependencies": {
+    "@emotion/core": "^10.0.17",
+    "@emotion/styled": "^10.0.17",
     "airtable": "^0.7.1",
-    "dotenv": "^6.1.0",
+    "axios": "^0.19.0",
+    "babel-plugin-emotion": "^10.0.17",
+    "dotenv": "^8.1.0",
+    "emotion-theming": "^10.0.17",
     "gatsby": "^2.13.73",
     "gatsby-image": "^2.2.10",
+    "gatsby-plugin-emotion": "^4.1.5",
     "gatsby-plugin-manifest": "^2.2.6",
     "gatsby-plugin-offline": "^2.2.7",
     "gatsby-plugin-react-helmet": "^3.1.4",
     "gatsby-plugin-sharp": "^2.2.13",
     "gatsby-source-filesystem": "^2.1.11",
     "gatsby-transformer-sharp": "^2.2.7",
-    "netlify-lambda": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-particles-js": "^2.7.0"
   },
   "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.18.2"
   },
   "keywords": [
@@ -34,11 +47,9 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
-    "dev": "netlify-lambda serve functions",
-    "build:functions": "netlify-lambda build functions",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "clean": "rm -rf .cache && rm -rf ./public",
+    "develop": "node --max_old_space_size=4096 ./node_modules/.bin/gatsby develop --host 0.0.0.0 --port 8000",
+    "start": "yarn clean && npm run develop",
     "serve": "gatsby serve"
   },
   "repository": {
